resources/webidl2/test/invalid/baseline/extattr-double.txt
Syntax error at line 1:
[Constructor([Clamp] [Clamp
             ^ Unexpected token in extended attribute argument list
